tests/ui/feature-gates/feature-gate-super-let.stderr
error[E0658]: `super let` is experimental
  --> $DIR/feature-gate-super-let.rs:2:5
   |
LL |     super let a = 1;
   |     ^^^^^
   |
   = note: see issue #139076 <https://github.com/rust-lang/rust/issues/139076> for more information
   = help: add `#![feature(super_let)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: `super let` is experimental
  --> $DIR/feature-gate-super-let.rs:9:5
   |
LL |     super let a = 1;
   |     ^^^^^
   |
   = note: see issue #139076 <https://github.com/rust-lang/rust/issues/139076> for more information
   = help: add `#![feature(super_let)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
